--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
     color: #fff;
 }
 #input{
-    margin-left: 940px;
+    margin-left: 490px;
     margin-top: 30px;
     width: 300px;
     height: 50px;
@@ -52,7 +52,7 @@
     font-size: 24px;
 }
 .h4{
-    margin-left: 810px;
+    margin-left: 350px;
     margin-top: -45px;
     font-size: 32px;
     color: #fff;
@@ -68,4 +68,8 @@ body{
     background-color: cornflowerblue;
     border-radius: 6px;
     color: #fff;
+}
+.container{
+    margin-right: auto;
+    margin-left: auto;
 }
